syntax = "proto3";
package addressbook;

import "google/protobuf/timestamp.proto";

option go_package="go/server/addressbook";

message Person {
   string name = 1;
   int32 id = 2;  // Unique ID number for this person.
   string email = 3;
 
   message PhoneNumber {
     string number = 1;
     PhoneType type = 2;
   }
 
   repeated PhoneNumber phones = 4;
 
   google.protobuf.Timestamp last_updated = 5;
 }
 
 enum PhoneType {
   PHONE_TYPE_UNSPECIFIED = 0;
   PHONE_TYPE_MOBILE = 1;
   PHONE_TYPE_HOME = 2;
   PHONE_TYPE_WORK = 3;
 }
 
 // Our address book file is just one of these.
 message AddressBook {
   repeated Person people = 1;
 }

// service is the keyword for rpc which is for implementing api design
service AddressBookService{
   rpc ListPerson(ListPersonRequest) returns (ListPersonResponse); //the rpc service 
   rpc AddPerson(Person) returns (AddPersonResponse);
}
message ListPersonRequest{}
message ListPersonResponse{
  repeated Person Person=1;
}
message AddPersonResponse{}